[package]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
build = "build.rs"
categories = [
    "config",
    "cryptography",
    "data-structures",
    "development-tools",
    "mathematics",
]
description = "A Rust library for accessing a collection of mathematical and cryptographic constants"
documentation = "https://docs.rs/cmn"
edition = "2021"
exclude = [
    "/.git/*",
    "/.github/*",
    "/.gitignore",
    "/.vscode/*"
    ]
homepage = "https://minifunctions.com/"
keywords = ["cmn", "common", "config", "configurations", "constants"]
license = "MIT OR Apache-2.0"
name = "cmn"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/cmn/"
rust-version = "1.69.0"
version = "0.0.3"
include = [
    "/CONTRIBUTING.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
    "/xtask/**",
]

[workspace]
members = ["xtask"]

[[bench]]
name = "benchmark"
harness = false
path = "benches/criterion.rs"

[profile.bench]
debug = true

[[example]]
name = "cmn"
path = "examples/cmn.rs"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.97"

[dev-dependencies]
assert_cmd = "2.0.11"
criterion = "0.5.1"

[lib]
crate-type = ["lib"]
name = "cmn"
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1        # Compile crates one after another so the compiler can optimize better
debug = false            # Disable debug information
debug-assertions = false # Disable debug assertions
incremental = false      # Disable incremental compilation
lto = true               # Enables link to optimizations
opt-level = "s"          # Optimize for binary size
overflow-checks = false  # Disable overflow checks
panic = "abort"          # Strip expensive panic clean-up logic
rpath = false            # Disable rpath
strip = "symbols"        # Automatically strip symbols from the binary.

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
